# zerodb-prefect

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
tests/: test_block.py  test_credentials.py  test_provision.py  test_sensor.py
zerodb_prefect/: __init__.py  block.py  credentials.py  provision.py  sensor.py
