[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zerodb-prefect"
version = "0.1.0"
description = "Prefect event sensor and result storage for ZeroDB. Auto-provisioning, zero config."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    {name = "AINative Studio", email = "dev@ainative.studio"},
]
keywords = [
    "prefect",
    "prefect-sensor",
    "prefect-block",
    "workflow",
    "orchestration",
    "event-driven",
    "zerodb",
    "ainative",
    "vector-database",
    "embeddings",
    "ai-database",
    "free-database",
    "mcp",
    "data-pipeline",
    "etl",
    "mlops",
    "ml-pipeline",
    "agent-workflow",
    "sensor",
    "result-storage",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "prefect>=2.14",
    "requests>=2.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/AINative-Studio/zerodb-prefect"
Documentation = "https://docs.ainative.studio"
Repository = "https://github.com/AINative-Studio/zerodb-prefect"
Issues = "https://github.com/AINative-Studio/zerodb-prefect/issues"

[tool.setuptools.packages.find]
include = ["zerodb_prefect*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
